# simpletools

./: CHANGELOG  CMakeLists.txt  README  README.md
cmake/: FindROOT.cmake
include/: TFunctor.h  cropFoMs.h  cropcutensemble.h  cropcutspace.h  cropdataset.h  cropdatastore.h  cropmiscfunctions.h  cropoptimisationengine.h  cropvarensemble.h
simpletools_tutorial/: .kprof.html  cleanup.sh  exampledata.root  exampledata_testcolumn.root  inputfiles.txt  inputfilescut.txt  inputfilesnorm.txt  tutorial.sh  tutorial_README
src/: bwdiv.cc  columnmaker.cc  corr.cc  crop.cc  cropcutensemble.cc  cropcutspace.cc  cropdataset.cc  cropdatastore.cc  cropoptimisationengine.cc  cropvarensemble.cc  cutapplier.cc  cuttester.cc  eff.cc  mergevars.cc  multicolumnmaker.cc  randommaker.cc  rangefinder.cc  sepper.cc  stacker.cc  stackergen.cc  thresholdeffs.cc  tuplesampler.cc  tuplescrambler.cc  updatedatastore.cc  varstocuts.cc
